# predicates

./: CMakeLists.txt  Contributors.md  LICENSE  README.md
cmake/: Doxyfile.in  predicates_versions.h.in
examples/: CMakeLists.txt
examples/include/: predicates_example.h  predicates_example.hpp
examples/orient2d/: CMakeLists.txt  orient2d.c
include/predicates/: predicates.h
src/: CMakeLists.txt  predicates.c
tests/: CMakeLists.txt
tests/include/: predicates_test.hpp
