################################################################################
# Copyright (c) 2018 David D. Marshall <ddmarsha@calpoly.edu>
#
# All rights reserved. Licensed under the MIT License. See LICENSE file in the 
# project root for full license information.
################################################################################

project(PREDICATES_TESTS)

# include common test header files
include_directories(${PROJECT_SOURCE_DIR}/include)
#####include_directories(${CPPTEST_INCLUDE_DIR})

# set what libraries need to be used
#####set(_ELI_TESTS_LIBRARIES_LIST "${CPPTEST_LIBRARIES}")

#####add_subdirectory(constant)
#####add_subdirectory(util)

